# graphics

./: .gitignore  .gitmodules  CMakeLists.txt  MyApp.cpp  MyApp.hpp  imgui.ini  main.cpp  myFrag.frag  myVert.vert  run.bash
MyOpenGL/: CMakeLists.txt
MyOpenGL/BufferObjects/: BufferObject.h  BufferObject.inl  DSABufferStatic.hpp  DSABufferStaticArray.hpp  DSABuffers.cpp  DSABuffers.hpp
MyOpenGL/Camera/: gCamera.cpp  gCamera.h
MyOpenGL/FrameBuffers/: DSAFrameBuffer.hpp  DSAFrameBuffers.cpp  DSAFrameBuffers.hpp
MyOpenGL/Loaders/: ObjParser.cpp  ObjParser.hpp  gltfLoader.cpp  gltfLoader.hpp
MyOpenGL/Mesh/: DSAMesh.cpp  DSAMesh.hpp  Mesh.cpp  Mesh.hpp
MyOpenGL/Model/: Material.hpp  Model.cpp  Model.hpp
MyOpenGL/Programs/: ProgramObject.cpp  ProgramObject.h  ProgramObject.inl  ProgramPipeline.cpp  ProgramPipeline.hpp  ProgramPipelines.hpp
MyOpenGL/Shaders/: ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramUniform.cpp
MyOpenGL/Textures/: DSATextures.hpp  TextureObject.h  TextureObject.inl
MyOpenGL/Utils/: GLDebugMessageCallback.cpp  GLDebugMessageCallback.h  GLUtils.cpp  GLUtils.hpp  GLconversions.hpp  enums.hpp  spdlog-config.hpp
MyOpenGL/VertexArrays/: DSAVertexArray.cpp  DSAVertexArray.hpp  DSAVertexArrays.hpp  VertexArrayObject.cpp  VertexArrayObject.h  VertexArrayObject.inl
assets/: earth.mtl  eyeball.mtl  hammerhead.mtl  kocka.mtl  malenia.mtl  suzanne.mtl  untitled.gltf
includes/: DSABuffers.hpp  DSAFrameBuffer.cpp  DSAMesh.cpp  DSAMesh.hpp  DSATexture.cpp  DSATexture.hpp  DSAVertexArray.hpp  GLDebugMessageCallback.cpp  GLUtils.cpp  GLUtils.hpp  GLconversions.hpp  Material.hpp  Mesh.cpp  Model.cpp  Model.hpp  ObjParser.cpp  ObjParser.hpp  ProgramObject.h  ProgramPipelines.cpp  ProgramPipelines.hpp  ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramUniform.cpp  TextureObject.h  TextureObject.inl  enums.hpp
libs/: CMakeLists.txt
shaders/: fragment.frag  functions.glsl  myFrag.frag  myVert.vert  structs.glsl  vertex.vert
test/: MyEnvironment.cpp  MyEnvironment.hpp  test_main.cpp
test/test_cases/: DSABufferStaticTest.hpp  ProgramPipelineTest.hpp
